--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
     - uses: actions/docker/login@master
     with:
-      [${{ DOCKER_USERNAME ***REMOVED******REMOVED***, ${{ DOCKER_PASSWORD ***REMOVED******REMOVED***
+      [${{ DOCKER_USERNAME ***REMOVED******REMOVED***, ${{ DOCKER_PASSWORD ***REMOVED******REMOVED***]
     - name: Run a one-line script
       run: echo Hello, world!
