--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - uses: actions/docker/login@master
     with:
-      [${{ DOCKER_USERNAME ***REMOVED******REMOVED***, ${{ DOCKER_PASSWORD ***REMOVED******REMOVED***]
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME ***REMOVED******REMOVED***
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD ***REMOVED******REMOVED***
     - name: Run a one-line script
       run: echo Hello, world!
