--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -6,8 +6,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Update gist
+        run: |
+          npm install
         uses: superman66/wakatime-sync@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN ***REMOVED******REMOVED***
-          GIST_ID: 42c1c69f5ced6a245dbba24be51e747b
+          GIST_ID: ${{ secrets.GIST_ID***REMOVED******REMOVED***
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY ***REMOVED******REMOVED***
