--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Update gist
         uses: superman66/wakatime-sync@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN ***REMOVED******REMOVED***
+          GH_TOKEN: ${{ secrets.GH_TOKEN ***REMOVED******REMOVED***
           GIST_ID: ${{ secrets.GIST_ID***REMOVED******REMOVED***
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY ***REMOVED******REMOVED***
